--- a/workflows/edit_data_packages/update_a_package.Rmd
+++ b/workflows/edit_data_packages/update_a_package.Rmd
@@ -8,14 +8,14 @@ First make sure you have the package you want to update, [loaded into R](#get-pa
 
 If you need to make edits to the metadata, do so. Then write the `eml` metadata to a file.
 
-``` {r, eval = F}
+``` {r, eval = FALSE}
 eml_path <- "path/to/metadata/science_metadata.xml"
 write_eml(eml, eml_path)
 ```
 
 Next verify the eml is valid.
 
-``` {r, eval = F}
+``` {r, eval = FALSE}
 EML::eml_validate(eml_path)
 ```
 
