--- a/workflows/explore_eml/access_specific_elements.Rmd
+++ b/workflows/explore_eml/access_specific_elements.Rmd
@@ -1,17 +1,14 @@
-## Access specific elements
+### Access specific elements
+
 The `eml_get` function is a powerful tool for exploring EML (more on that [here](https://cran.rstudio.com/web/packages/EML/vignettes/parsing-EML.html)). It takes any chunk of `eml` and returns _all instances_ of the element you specify. _Note:_ you'll have to specify the element of interest exactly, according to the spelling/capitalization conventions used in EML. Here are some examples:
 
-```{r}
-library(EML)
+```{r, eval = FALSE}
+# Load an example EML file
 eml <- EML::read_eml(system.file("example-eml.xml", package = "arcticdatautils"))
+
+# Try these to see get various components of the eml file
 EML::eml_get(eml, "creator")
-```
-
-```{r}
 EML::eml_get(eml, "boundingCoordinates")
-```
-
-```{r}
 EML::eml_get(eml, "url")
 ```
 
