--- a/training/10_nesting_packages.Rmd
+++ b/training/10_nesting_packages.Rmd
@@ -1,7 +1,7 @@
 # Nesting a data package
 
 ```{r global_options, include=FALSE}
-knitr::opts_chunk$set(eval = F)
+knitr::opts_chunk$set(eval = FALSE)
 ```
 
 ## Introduction  
@@ -66,7 +66,7 @@ We can start by creating two data packages on the test node to nest beneath a pa
 
 First, load the Arctic Data Center Test Node and libraries.
   
-```{r eval = TRUE}
+```{r eval = FALSE}
 library(dataone)
 library(arcticdatautils)
 library(EML)
@@ -77,7 +77,7 @@ mnTest <- getMNode(cnTest,'urn:node:mnTestARCTIC')
 
 We can publish several data files at once using the `dir` and `sapply` functions. `dir` returns the paths to every file located in a folder.  
 
-```{r, eval = T}
+```{r, eval = FALSE}
 dir("data/2013", full.names = TRUE)
 ```
   
@@ -127,7 +127,7 @@ These two packages correspond to data from the same study, varying only by year;
 
 Now, let's create a parent metadata file. Read in one of the children's metadata files (EML). 
   
-```{r, eval = T}
+```{r, eval = FALSE}
 eml_parent <- read_eml("data/E1_2013metadata.xml")
 ## Use this code when you are reading in the parent 
 # eml_parent <- read_eml("/home/dmullen/Nesting_Training/E1_2013metadata.xml")
