--- a/workflows/edit_eml/use_references.Rmd
+++ b/workflows/edit_eml/use_references.Rmd
@@ -1,12 +1,5 @@
 ## Use references
 
-```{r echo = FALSE, warning = FALSE, message = FALSE}
-library(methods)
-library(dplyr)
-library(EML)
-library(datamgmt)
-```
-
 ### Introduction
 References are a way to avoid repeating the same information multiple times in the same EML record. There are a few benefits to doing this, including:
     
@@ -20,20 +13,19 @@ You may want to use EML references if you have the following scenarios (not exha
 -   One or more entities shares all or some attributes
 
 ### Example with parties
-It's very common to see the contact and creator referring to the same person with XML like this:
+It's very common to see the contact and creator referring to the same person with eml like this (e.g. the creator is "Bryce Mecum" and the contact is "Bryce Mecum").
     
-``` {r eval = TRUE, echo = FALSE}
+``` {r eval = FALSE}
 eml <- new("eml")
 eml@packageId <- new("xml_attribute", "my_test_doc")
 eml@system <- new("xml_attribute", "my_system")
 eml@dataset@creator  <- c(arcticdatautils::eml_creator("Bryce", "Mecum"))
 eml@dataset@contact <- c(arcticdatautils::eml_contact("Bryce", "Mecum"))
-print(eml)
 ```
 
 So you see those two times Bryce Mecum is referenced there? If you mean to state that Bryce Mecum is the creator and contact for the dataset, this is a good start. But with just a name, there's some ambiguity as to whether the creator and contact are truly the same person. Using references, we can remove all doubt.
 
-``` {r eval = TRUE}
+``` {r eval = FALSE}
 eml@dataset@creator[[1]]@id  <- new("xml_attribute", "reference_id")
 eml@dataset@contact[[1]] <- new("contact", reference = "reference_id")
 print(eml)
@@ -69,7 +61,7 @@ The `datamgmt::add_creator_id()` function is a shortcut for one of our most comm
 1. Add the ORCID to a creator (usually the first creator). You can look up ORCIDs [here](https://orcid.org/orcid-search/search). 
 2. Update the contact information for that individual's other roles
 
-```{r eval = TRUE}
+```{r eval = FALSE}
 eml <- eml %>%
     datamgmt::add_creator_id(surname = "mecum",
                    orcid = "https://orcid.org/0000-1234-5678-4321",
