--- a/workflows/edit_eml/use_references.Rmd
+++ b/workflows/edit_eml/use_references.Rmd
@@ -2,9 +2,8 @@
 
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
 library(methods)
-library(dplyr)
 library(EML)
-library(datamgmt)
+library(magrittr)
 ```
 
 ### Introduction
