--- a/workflows/solr_queries/xample_solr_queries.Rmd
+++ b/workflows/solr_queries/xample_solr_queries.Rmd
@@ -1,10 +1,7 @@
 ## Example Solr queries
 
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
-library(knitr)
 library(magrittr)
-library(kableExtra)
-library(tibble)
 
 cn <- dataone::CNode('PROD')
 mn <- dataone::getMNode(cn,'urn:node:ARCTIC')
@@ -13,7 +10,8 @@ format_query_result <- function(query_result) {
   query_result %>% 
     knitr::kable(format = "html") %>% 
     kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed")) %>% 
-    kableExtra::scroll_box(box_css = "overflow-x: auto") #display concisely
+    kableExtra::scroll_box(width = "100%",
+                           height = "400px") #display concisely
 }
 ```
 
@@ -22,7 +20,7 @@ format_query_result <- function(query_result) {
 ```{r}
 result <- dataone::query(mn, list(q="*:*",
                                   fl="*",
-                                  rows="5"),
+                                  rows="20"),
                          as = "data.frame")
 ```
 
@@ -33,83 +31,51 @@ format_query_result(result)
 
 ### Query a wildcard expression 
 
-```{r type = "markdown-table"}
+```{r eval = FALSE}
 #find any id that starts with arctic-data.6
 result <- dataone::query(mn, list(q="id:arctic-data.6*",
-                                  fl="*",
                                   rows="5"),
                          as = "data.frame")
-```
-
-```{r echo = FALSE}
-format_query_result(result)
 ```
 
 ### Query multiple fields 
 
-```{r}
+```{r eval = FALSE}
 result <- dataone::query(mn, list(q="title:*soil*+AND+origin:*Ludwig*",
-                        fl="title",
                         rows="5"),
                         as = "data.frame")
 ```
 
-```{r echo = FALSE}
-format_query_result(result)
-```
-
-```{r}
+```{r eval = FALSE}
 result <- dataone::query(mn, list(q="title:*soil*+OR+origin:*Ludwig*",
-                                  fl="title",
                                   rows="5"),
                          as = "data.frame")
 ```
 
-
-```{r echo = FALSE}
-format_query_result(result)
-```
-
-
 ### Query multiple conditions within one field
 
-```{r}
+```{r eval = FALSE}
 result <- dataone::query(mn, list(q="title:(*soil*+AND+*carbon*)",
-                                  fl="title",
                                   rows="5"),
                          as = "data.frame") 
-```
-
-```{r echo = FALSE}
-format_query_result(result)
 ```
 
 ### Use NOT in a query
 
 Just add `-` before a query parameter!
 
-```{r}
+```{r eval = FALSE}
 result <- dataone::query(mn, list(q="title:(*soil*+AND+-*carbon*)",
-                                  fl="title",
                                   rows="5"),
                          as = "data.frame")
-```
-
-```{r echo = FALSE}
-format_query_result(result)
 ```
 
 ### Query a coordinating node
 
-```{r}
+```{r eval = FALSE}
 result <- dataone::query(cn, list(q="title:*soil*+AND+origin:*Ludwig*",
-                                  fl="title",
                                   rows="5"),
                          as = "data.frame")
-```
-
-```{r echo = FALSE}
-format_query_result(result)
 ```
 
 ### Use facets
