--- a/workflows/solr_queries/construct_a_query.Rmd
+++ b/workflows/solr_queries/construct_a_query.Rmd
@@ -20,11 +20,11 @@ In the second example, the DOI PID is surrounded in double quotes. This is becau
 To view the list of query-able parameters on the Arctic Data Center and their descriptions, you can visit https://arcticdata.io/metacat/d1/mn/v2/query/solr. The list of parameters is also provided below:
 
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
-library(tidyverse)
+library(magrittr)
 adc_solr <- httr::GET("https://arcticdata.io/metacat/d1/mn/v2/query/solr")
 
 adc_solr %>% 
-  str_extract_all("name>.*<") %>% 
+  stringr::str_extract_all("name>.*<") %>% 
   unlist() %>% 
-  str_replace_all("name>|<", "")
+  stringr::str_replace_all("name>|<", "")
 ```
