--- a/workflows/explore_eml/access_specific_elements.Rmd
+++ b/workflows/explore_eml/access_specific_elements.Rmd
@@ -1,22 +1,26 @@
 ## Access specific elements
 The `eml_get` function is a powerful tool for exploring EML (more on that [here](https://cran.rstudio.com/web/packages/EML/vignettes/parsing-EML.html)). It takes any chunk of `eml` and returns _all instances_ of the element you specify. _Note:_ you'll have to specify the element of interest exactly, according to the spelling/capitalization conventions used in EML. Here are some examples:
 
-```{r}
+```{r echo = FALSE, message = FALSE, warning = FALSE}
+library(arcticdatautils) #load to grab package
+```
+
+```{r "creator"}
 eml <- EML::read_eml(system.file("example-eml.xml", package = "arcticdatautils"))
 EML::eml_get(eml, "creator")
 ```
 
-```{r}
+```{r "boundingCoords"}
 EML::eml_get(eml, "boundingCoordinates")
 ```
 
-```{r}
+```{r "url"}
 EML::eml_get(eml, "url")
 ```
 
 You can also use the `which_in_eml` function from the `datamgmt` package to get indices within an `eml` list. Here are some examples:
 
-```{r eval = FALSE}
+```{r "which_in_eml", eval = FALSE}
 # Question: Which creators have a surName "Smith"?
 n <- which_in_eml(eml@dataset@creator, "surName", "Smith")
 # Answer: eml@dataset@creator[n]
