--- a/workflows/solr_queries/xample_solr_queries.Rmd
+++ b/workflows/solr_queries/xample_solr_queries.Rmd
@@ -1,5 +1,7 @@
 ## Example Solr queries
 
+For additional examples and explanations, check out the Apache Lucene [Query Parser Syntax](https://lucene.apache.org/core/2_9_4/queryparsersyntax.html) page.
+
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
 library(magrittr)
 
@@ -34,29 +36,33 @@ format_query_result(result)
 ```{r eval = FALSE}
 #find any id that starts with arctic-data.6
 result <- dataone::query(mn, list(q="id:arctic-data.6*",
-                                  rows="5"),
+                                  rows="5000"),
                          as = "data.frame")
 ```
 
 ### Query multiple fields 
 
 ```{r eval = FALSE}
-result <- dataone::query(mn, list(q="title:*soil*+AND+origin:*Ludwig*",
-                        rows="5"),
+result <- dataone::query(mn, list(q="title:soil*+AND+origin:Ludwig",
+                        rows="5000"),
                         as = "data.frame")
 ```
 
 ```{r eval = FALSE}
-result <- dataone::query(mn, list(q="title:*soil*+OR+origin:*Ludwig*",
-                                  rows="5"),
+result <- dataone::query(mn, list(q="title:soil* OR origin:Ludwig",
+                                  rows="5000"),
                          as = "data.frame")
+```
+
+```{block, type = "note"}
+You can use either spaces or `+` to separate query parameters. When typing queries in R, it's often easier to read if you use spaces. However, when using the browser, you may want to use `+` to keep the query clean. (The browser will replace spaces with `%20`.)
 ```
 
 ### Query multiple conditions within one field
 
 ```{r eval = FALSE}
-result <- dataone::query(mn, list(q="title:(*soil*+AND+*carbon*)",
-                                  rows="5"),
+result <- dataone::query(mn, list(q="title:(soil* AND carbo*)",
+                                  rows="5000"),
                          as = "data.frame") 
 ```
 
@@ -65,16 +71,16 @@ result <- dataone::query(mn, list(q="title:(*soil*+AND+*carbon*)",
 Just add `-` before a query parameter!
 
 ```{r eval = FALSE}
-result <- dataone::query(mn, list(q="title:(*soil*+AND+-*carbon*)",
-                                  rows="5"),
+result <- dataone::query(mn, list(q="title:(soil AND -carbon)",
+                                  rows="5000"),
                          as = "data.frame")
 ```
 
 ### Query a coordinating node
 
 ```{r eval = FALSE}
-result <- dataone::query(cn, list(q="title:*soil*+AND+origin:*Ludwig*",
-                                  rows="5"),
+result <- dataone::query(cn, list(q="title:soil* AND origin:Ludwig",
+                                  rows="5000"),
                          as = "data.frame")
 ```
 
