--- a/workflows/edit_data_packages/set_dataone_nodes.Rmd
+++ b/workflows/edit_data_packages/set_dataone_nodes.Rmd
@@ -5,7 +5,7 @@ Tell R which repo you want to work with by setting the `Coordinating Node` (cn) 
 A note on nodes - be very careful about what you publish on production nodes (PROD, or arcticdata.io). These nodes should NEVER be used to publish test or training datasets.
 ```
 
-### Test nodes
+### Staging (Test) nodes
 ```{r, eval = F}
 # ADC (test.arcticdata.io)
 cn <- dataone::CNode('STAGING')
@@ -27,5 +27,5 @@ cn <- dataone::CNode("PROD")
 mn <- dataone::getMNode(cn, "urn:node:KNB")
 ```
 
-[More DataONE TEST nodes can be found here.](https://cn-stage.test.dataone.org/cn/v2/node)
+[More DataONE STAGING nodes can be found here.](https://cn-stage.test.dataone.org/cn/v2/node)
 [More DataONE PROD nodes can be found here.](https://cn.dataone.org/cn/v2/node)
