--- a/workflows/adc_web_submissions/assess_attributes.Rmd
+++ b/workflows/adc_web_submissions/assess_attributes.Rmd
@@ -1,6 +1,6 @@
 ## Assess Attributes
 
-New submissions made through the web editor should have attributes created by the submitter. If there are no or incomplete attributes, please use the [email template](#need-attributes) to correspond with the submitter to ask for attributes.
+New submissions made through the web editor should have attributes created by the submitter. If there are no attributes, or if they are incomplete, please use the [email template](#need-attributes) to correspond with the submitter to ask for attributes.
 
 Additonally, the web editor will not allow for the creation of custom units. Submitters should select `other/none` in the editor unit dropdown if they cannot find their desired unit. In the `eml` document, these will result in `dimensionless` units. Accordingly, new submissions should be checked for `dimensionless` units. This can be done with the following code.
     
