--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -14,7 +14,7 @@ description: "This is a training guide and reference resource for NCEAS data tea
 
 ## First day to-dos
 
-* Get a tour of the office from Ginger, Jeanette, or Jesse
+* Get a tour of the office from Ginger, Dom, Jeanette, or Jesse
 * Fill out required paperwork from Michelle
 * Have Ana take your picture (room 309)
 * Set up the remainder of your accounts
@@ -27,7 +27,7 @@ description: "This is a training guide and reference resource for NCEAS data tea
 * [ORCiD](https://orcid.org/register) - create an account
 * [NCEAS Slack](http://nceas.slack.com) - get an invite from [slack.nceas.ucsb.edu](http://slack.nceas.ucsb.edu)
     + Channels to join: #arctica, #arcticbot, #computing, #datateam, #devteam, #sasap, #social
-* Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Jesse or Jeanette in Slack
+* Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Dom, Jeanette, or Jesse in Slack
 * GitHub - if you do not have a public GitHub account already, please register for one [here](https://github.com/join?source=header-home)
 * [Schedule](https://docs.google.com/spreadsheets/d/1Jf7IkSf8Vqu51xv1DDaTNCrTAZd0RMNH9ExZw0eyH4I/edit#gid=948090118) - fill out anticipated quarterly schedule. Note there are separate tabs for each week AND a general schedule tab for the quarter.
 
